# skittle-bot

./: .env  .gitignore  Cargo.toml  README.md  build.sh  skittle.db.sql
config/: core.toml
migrations/2023-09-16-201101_core_users/: down.sql  up.sql
migrations/2023-09-16-201108_core_associations/: down.sql  up.sql
migrations/2023-09-16-201137_moderation_mutes/: down.sql  up.sql
migrations/2023-09-16-201151_moderation_reports/: down.sql  up.sql
migrations/2023-09-16-201241_moderation_messages/: down.sql  up.sql
migrations/2023-09-16-201250_moderation_notes/: down.sql  up.sql
migrations/2023-09-16-201255_moderation_kicks/: down.sql  up.sql
migrations/2023-09-16-201257_moderation_bans/: up.sql
migrations/2023-09-16-203354_moderation_message_references/: down.sql  up.sql
modules/skittle-bot-core-module/: Cargo.toml
modules/skittle-bot-core-module/src/: lib.rs
modules/skittle-bot-core-module/src/commands/: ping.rs
scripts/: ccl.sh
src/: config.rs  handler.rs  lib.rs  logger.rs  macros.rs  main.rs  module_loader.rs  util.rs
src/db/: mod.rs  schema.rs  types.rs
src/db/models/: core_associations.rs  core_users.rs  mod.rs  moderation_bans.rs  moderation_kicks.rs  moderation_message_references.rs  moderation_messages.rs  moderation_mutes.rs  moderation_notes.rs  moderation_reports.rs
src/db/schema/: core_user.rs  message.rs  message_ref.rs  mod.rs  user_ban.rs  user_kick.rs  user_mute.rs  user_note.rs  user_report.rs
src/locale/: mod.rs
src/locale/en_US/: handler.rs  mod.rs
src/macros/: db.rs  mod.rs
src/modules/: mod.rs  types.rs
src/modules/core/: mod.rs
src/modules/core/commands/: database.rs  help.rs  mod.rs  modules.rs  ping.rs  rolemgr.rs
src/modules/core/events/: member_add.rs  mod.rs
src/modules/moderation/: mod.rs
src/modules/moderation/commands/: mod.rs  mute.rs  unmute.rs
src/modules/music/: mod.rs
src/modules/music/commands/: mod.rs  play.rs
src/modules/test/: mod.rs
templates/config/: core.toml
templates/example_module/commands/: example_command.rs
templates/module/: mod.rs
templates/module/commands/: mod.rs
