[package]
name = "skittle-bot-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default=["core", "moderation"]
core=[]
moderation=[]
music=[]

[dependencies]
color-eyre = "0.6.2"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.19"
serde = { version = "1.0.171", features = ["derive"] }
shellwords = "1.1.0"
sqlx = "0.7.1"
tokio = { version = "1.29.1", features = ["full"] }
toml = "0.7.6"

[dependencies.serenity]
version = "0.11.6"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "cache"]
