[package]
name = "skittle-bot-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default=[
    "core", 
    # "moderation",
    "sqlite"
]

core=[]
moderation=[]
music=["songbird"]

sqlite=["diesel/sqlite"]



[dependencies]
color-eyre = "0.6.2"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.19"
serde = { version = "1.0.171", features = ["derive"] }
shellwords = "1.1.0"
tokio = { version = "1.29.1", features = ["full"] }
toml = "0.8.0"
diesel = { version = "2.1.1", features = ["r2d2", "bigdecimal"] }
dotenvy = "0.15"
songbird = {version = "0.3.2", optional = true}
chrono = "0.4.31"
clap = { version = "4.4.4", features = ["derive"] }

[dependencies.serenity]
version = "0.11.6"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "cache"]

[[bin]]
name = "custom"