[package]
name = "skittle-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default=[
    "core", 
    "moderation",
    "db_toml"
]

core=[]
moderation=[]
music=["songbird"]
db_bin=["bincode"]
db_toml=[]



[dependencies]
color-eyre = "0.6.2"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.19"
serde = { version = "1.0.171", features = ["derive"] }
shellwords = "1.1.0"
tokio = { version = "1.29.1", features = ["full"] }
toml = "0.8.0"
dotenvy = "0.15"
songbird = {version = "0.3.2", optional = true}
chrono = "0.4.31"
clap = { version = "4.4.4", features = ["derive"] }
bincode = { version = "1.3.3", features = ["i128"], optional = true }
cfg-if = "1.0.0"
uuid = { version = "1.4.1", features = ["v4"] }

[dependencies.serenity]
version = "0.11.6"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "cache"]
